# Projet_fil_rouge

./: main.py  pyproject.toml
src/: .coverage  competences.py  main.py  pyproject.toml  test_projet.py
src/utilisateurs/: Apprenant.py  Formateur.py  Promotion.py  Utilisateur.py  promotion.py
