[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--cov=. --cov-fail-under=80"

[tool.ruff.lint]
select = ["E", "F", "I"]